// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | PageWrapper PageWrapper 1`] = `
.c1 {
  margin: 0 auto;
}

.c2 {
  padding-top: 16px;
  padding-bottom: 16px;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

@media (min-width:768px) {
  .c1 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media (min-width:360px) {
  .c3 {
    font-size: 16px;
    line-height: 1.5;
  }
}

@media (min-width:768px) {
  .c0 {
    max-width: 718px;
  }
}

@media (min-width:992px) {
  .c0 {
    max-width: 942px;
  }
}

@media (min-width:1300px) {
  .c0 {
    max-width: 1250px;
  }
}

<div
  className=""
>
  <div
    className="c0 c1"
  >
    <div
      className="c2"
    >
      <span
        className="c3"
      >
        Page contents inside the PageWrapper can be anything.
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | PageWrapper PageWrapper with a custom background 1`] = `
.c2 {
  margin: 0 auto;
}

.c3 {
  padding-top: 16px;
  padding-bottom: 16px;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c0 {
  background-color: #F5F5F5;
}

@media (min-width:768px) {
  .c2 {
    padding-left: 8px;
    padding-right: 8px;
  }
}

@media (min-width:360px) {
  .c4 {
    font-size: 16px;
    line-height: 1.5;
  }
}

@media (min-width:768px) {
  .c1 {
    max-width: 718px;
  }
}

@media (min-width:992px) {
  .c1 {
    max-width: 942px;
  }
}

@media (min-width:1300px) {
  .c1 {
    max-width: 1250px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    >
      <span
        className="c4"
      >
        Page contents inside the PageWrapper can be anything.
      </span>
    </div>
  </div>
</div>
`;
